# wallet

./: .gitignore  Cargo.toml  README.md  leptosfmt.toml  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json
prisma/: schema.prisma
prisma-cli/: Cargo.toml
rawStyles/: main.scss
src/: app.rs  error_template.rs  lib.rs  main.rs  prisma.rs
src/api/: mod.rs  rates.rs
src/components/: home_page.rs  login_page.rs  mod.rs  register_page.rs  shares.rs
src/server/: mod.rs
src/server/api/: get_rates.rs  login.rs  mod.rs  rates.rs  register.rs
src/server/clients/: mod.rs  postgre_sql_client.rs
src/server/types/: app_state.rs  mod.rs
