[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.181"
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
